--- a/components/Section/Section.module.scss
+++ b/components/Section/Section.module.scss
@@ -12,7 +12,10 @@
 }
 
 .sectionContainer {
+	position: relative;
 	width: 100%;
+
+	z-index: 2;
 
 	@media only screen and (min-width: $monitorSize) {
 		padding: 0 $sidePaddingMon;
